force-app/main/default/objects/OrgSync_Physician_Staging__c/OrgSync_Physician_Staging__c.object-meta.xml
<CustomObject>
    <description>This object is created to store physician data coming from classic org.</description>
    <label>Physician Stage</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Physician Stage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Physician Stages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>