force-app/main/default/objects/OrgSync_Physician_Staging__c/fields/OrgSync_CustomerId__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_CustomerId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <encryptionScheme>None</encryptionScheme>
    <label>CustomerId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>