force-app/main/default/objects/OrgSync_Physician_Staging__c/fields/OrgSync_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Date_of_Birth__c</fullName>
    <complianceGroup>PII;HIPAA</complianceGroup>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>