force-app/main/default/objects/OrgSync_Physician_Staging__c/fields/OrgSync_Degree_Description__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Degree_Description__c</fullName>
    <label>Degree Description</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MD</fullName>
            </value>
            <value>
                <fullName>PA</fullName>
            </value>
            <value>
                <fullName>NP</fullName>
            </value>
            <value>
                <fullName>RN</fullName>
            </value>
            <value>
                <fullName>DO</fullName>
            </value>
            <value>
                <fullName>CNS, BC-ADM, CDE</fullName>
            </value>
            <value>
                <fullName>CPT</fullName>
            </value>
            <value>
                <fullName>CPT CDE</fullName>
            </value>
            <value>
                <fullName>Endo</fullName>
            </value>
            <value>
                <fullName>Family Physician</fullName>
            </value>
            <value>
                <fullName>Independent CPT</fullName>
            </value>
            <value>
                <fullName>Pharmacist</fullName>
            </value>
            <value>
                <fullName>RD</fullName>
            </value>
            <value>
                <fullName>RD CDE</fullName>
            </value>
            <value>
                <fullName>RN CDE</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>