force-app/main/default/objects/OrgSync_Physician_Staging__c/fields/OrgSync_Description__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Physician/HCP Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>