force-app/main/default/objects/OrgSync_Physician_Staging__c/fields/OrgSync_Do_Not_Use__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Do_Not_Use__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate whether this Physician is working for the related Practice or not.</description>
    <label>Do Not Use</label>
    <type>Checkbox</type>
</CustomField>