force-app/main/default/objects/OrgSync_Physician_Staging__c/fields/OrgSync_FirstName__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_FirstName__c</fullName>
    <complianceGroup>PII;HIPAA</complianceGroup>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>