force-app/main/default/objects/OrgSync_Physician_Staging__c/fields/OrgSync_HCP_Target__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_HCP_Target__c</fullName>
    <label>HCP Target</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No default</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>Grow</fullName>
            </value>
            <value>
                <fullName>Nurture</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Protect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>