force-app/main/default/objects/OrgSync_Physician_Staging__c/fields/OrgSync_Legacy_Id__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Legacy_Id__c</fullName>
    <description>This field is designed to store Classic org record Id to keep in sync</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Legacy Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>