force-app/main/default/objects/OrgSync_Physician_Staging__c/fields/OrgSync_Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Mailing_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mailing Address</label>
    <type>Address</type>
</CustomField>