force-app/main/default/objects/OrgSync_Physician_Staging__c/fields/OrgSync_NPI__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_NPI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>NPI</label>
    <length>10</length>
    <type>Text</type>
</CustomField>