force-app/main/default/objects/OrgSync_Physician_Staging__c/fields/OrgSync_Other_Address__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Other_Address__c</fullName>
    <complianceGroup>PII;HIPAA</complianceGroup>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Address</label>
    <type>Address</type>
</CustomField>