force-app/main/default/objects/OrgSync_Physician_Staging__c/fields/OrgSync_Other_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Other_Reason_Code__c</fullName>
    <description>This is used to store the Other Reason Code</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Reason Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>