force-app/main/default/objects/OrgSync_Physician_Staging__c/fields/OrgSync_Paperwork_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Paperwork_Contact_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OrgSync Office Champion Phone</label>
    <type>Phone</type>
</CustomField>