force-app/main/default/objects/OrgSync_Physician_Staging__c/fields/OrgSync_Parent_Practice__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Parent_Practice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links this account to a parent practice account (of type “Practice”) to represent hierarchical relationships between practices.</description>
    <label>Parent Practice</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Practice</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Physician Stages</relationshipLabel>
    <relationshipName>Physician_Stages</relationshipName>
    <type>Lookup</type>
</CustomField>