force-app/main/default/objects/OrgSync_Physician_Staging__c/fields/OrgSync_PersonAssistantName__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_PersonAssistantName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Assistant</label>
    <length>40</length>
    <type>Text</type>
</CustomField>