force-app/main/default/objects/OrgSync_Physician_Staging__c/fields/OrgSync_PersonAssistantPhone__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_PersonAssistantPhone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Asst. Phone</label>
    <type>Phone</type>
</CustomField>