force-app/main/default/objects/OrgSync_Physician_Staging__c/fields/OrgSync_PersonDepartment__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_PersonDepartment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Department</label>
    <length>80</length>
    <type>Text</type>
</CustomField>