force-app/main/default/objects/OrgSync_Physician_Staging__c/fields/OrgSync_PersonDoNotCall__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_PersonDoNotCall__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Call</label>
    <type>Checkbox</type>
</CustomField>