force-app/main/default/objects/OrgSync_Physician_Staging__c/fields/OrgSync_PersonEmail__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_PersonEmail__c</fullName>
    <complianceGroup>PII;HIPAA</complianceGroup>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Email</label>
    <type>Email</type>
</CustomField>