force-app/main/default/objects/OrgSync_Physician_Staging__c/fields/OrgSync_PersonHasOptedOutOfEmail__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_PersonHasOptedOutOfEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Opt Out</label>
    <type>Checkbox</type>
</CustomField>