force-app/main/default/objects/OrgSync_Physician_Staging__c/fields/OrgSync_PersonHasOptedOutOfFax__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_PersonHasOptedOutOfFax__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fax Opt Out</label>
    <type>Checkbox</type>
</CustomField>