force-app/main/default/objects/OrgSync_Physician_Staging__c/fields/OrgSync_PersonLeadSource__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_PersonLeadSource__c</fullName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Let&apos;s go</fullName>
            </value>
            <value>
                <fullName>Get Started</fullName>
            </value>
            <value>
                <fullName>Get Started - Free Trial</fullName>
            </value>
            <value>
                <fullName>Get Started - Check Benefits</fullName>
            </value>
            <value>
                <fullName>ASPN</fullName>
            </value>
            <value>
                <fullName>Doctor Discussion Guide</fullName>
            </value>
            <value>
                <fullName>Request a Call</fullName>
            </value>
            <value>
                <fullName>Empezar</fullName>
            </value>
            <value>
                <fullName>PEK</fullName>
            </value>
            <value>
                <fullName>Phone Intake</fullName>
            </value>
            <value>
                <fullName>Advertisement</fullName>
            </value>
            <value>
                <fullName>Customer Event</fullName>
            </value>
            <value>
                <fullName>Employee Referral</fullName>
            </value>
            <value>
                <fullName>External Referral</fullName>
            </value>
            <value>
                <fullName>Google AdWords</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Purchased List</fullName>
            </value>
            <value>
                <fullName>Trade Show</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Patient Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>