force-app/main/default/objects/OrgSync_Physician_Staging__c/fields/OrgSync_PersonTitle__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_PersonTitle__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Title</label>
    <length>128</length>
    <type>Text</type>
</CustomField>