force-app/main/default/objects/OrgSync_Physician_Staging__c/fields/OrgSync_Phone__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Phone__c</fullName>
    <complianceGroup>PII;HIPAA</complianceGroup>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Business Phone</label>
    <type>Phone</type>
</CustomField>