force-app/main/default/objects/OrgSync_Physician_Staging__c/fields/OrgSync_Practice_Type__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Practice_Type__c</fullName>
    <label>Practice Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Office-based</fullName>
            </value>
            <value>
                <fullName>Hospital-based</fullName>
            </value>
            <value>
                <fullName>Clinic</fullName>
            </value>
            <value>
                <fullName>Resident</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>