force-app/main/default/objects/OrgSync_Physician_Staging__c/fields/OrgSync_Preferred_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Preferred_Phone_Number__c</fullName>
    <label>Preferred Phone Number</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Work</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>