force-app/main/default/objects/OrgSync_Physician_Staging__c/fields/OrgSync_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Reason_Code__c</fullName>
    <description>This is used to store the reason code when we mark the record as &apos;Do Not Use&apos;.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Reason Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>