force-app/main/default/objects/OrgSync_Physician_Staging__c/fields/OrgSync_Specialty__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Specialty__c</fullName>
    <label>Specialty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Diabetes</fullName>
            </value>
            <value>
                <fullName>Endocrinology</fullName>
            </value>
            <value>
                <fullName>Family Medicine</fullName>
            </value>
            <value>
                <fullName>Family Practice</fullName>
            </value>
            <value>
                <fullName>General Practice</fullName>
            </value>
            <value>
                <fullName>Internal Medicine</fullName>
            </value>
            <value>
                <fullName>Nurse Practitioner</fullName>
            </value>
            <value>
                <fullName>Pediatrics</fullName>
            </value>
            <value>
                <fullName>Physician Assistant</fullName>
            </value>
            <value>
                <fullName>No default</fullName>
            </value>
            <value>
                <fullName>Obstetrics/Gynecology</fullName>
            </value>
            <value>
                <fullName>Pediatric Endocrinology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>