force-app/main/default/objects/OrgSync_Physician_Staging__c/fields/XCDC_LastUserModTime__c.field-meta.xml
<CustomField>
    <fullName>XCDC_LastUserModTime__c</fullName>
    <description>Used to store the last modified time by customer to support the race condition functionality.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>XCDC_LastUserModTime</label>
    <type>DateTime</type>
</CustomField>