force-app/main/default/objects/OrgSync_Physician_Staging__c/fields/XCDC_ParentReferences__c.field-meta.xml
<CustomField>
    <fullName>XCDC_ParentReferences__c</fullName>
    <formula>&apos;{&quot;PracticeId&quot;:&quot;&apos;+OrgSync_Parent_Practice__r.XCDC_ExternalId__c+&apos;&quot;}&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>XCDC_ParentReferences</label>
    <type>Text</type>
</CustomField>