force-app/main/default/objects/OrgSync_Physician_Staging__c/fields/XORG_Source_RecordId__c.field-meta.xml
<CustomField>
    <fullName>XORG_Source_RecordId__c</fullName>
    <description>Used to store the corresponding Source id of record to support delete functionality</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Source RecordId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>