force-app/main/default/objects/OrgSync_Physician_Staging__c/recordTypes/Provider_RecordType.recordType-meta.xml
<RecordType>
    <fullName>Provider_RecordType</fullName>
    <active>true</active>
    <description>will be used a default rec type for physician staging</description>
    <label>Provider RecordType</label>
</RecordType>