force-app/main/default/objects/OrgSync_Physician_Staging__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OrgSync_FirstName__c</columns>
    <columns>OrgSync_LastName__c</columns>
    <columns>OrgSync_Legacy_Id__c</columns>
    <columns>OrgSync_NPI__c</columns>
    <columns>XCDC_ExternalId__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>